--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "oauth2-server",
   "description": "Complete, framework-agnostic, compliant and well tested module for implementing an OAuth2 Server in node.js",
-  "version": "3.0.0",
+  "version": "3.0.0-mydev.1",
   "keywords": [
     "oauth",
     "oauth2"
@@ -19,6 +19,7 @@
   "dependencies": {
     "basic-auth": "2.0.1",
     "bluebird": "3.7.2",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "4.17.15",
     "promisify-any": "2.0.1",
     "statuses": "1.5.0",
@@ -26,7 +27,7 @@
   },
   "devDependencies": {
     "jshint": "2.11.0",
-    "mocha": "3.5.3",
+    "mocha": "^7.1.0",
     "should": "11.2.1",
     "sinon": "2.4.1"
   },
